フォルダ比較更新

--- a/App.config
+++ b/App.config
@@ -52,6 +52,18 @@
             <setting name="PhotoDataFolder" serializeAs="String">
                 <value />
             </setting>
+            <setting name="DiffFolderWindowWidth" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="DiffFolderWindowHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="DiffFolderWindowTop" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="DiffFolderWindowLeft" serializeAs="String">
+                <value>0</value>
+            </setting>
         </ToolApp.Properties.Settings>
     </userSettings>
 </configuration>
