--- a/ToolApp.csproj
+++ b/ToolApp.csproj
@@ -163,5 +163,8 @@
       <Name>WpfLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Document\Memo.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
