--- a/App.config
+++ b/App.config
@@ -64,6 +64,36 @@
             <setting name="DiffFolderWindowLeft" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="YamaRecoListTop" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="YamaRecoListLeft" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="YamaRecoListWidth" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="YamaRecoListHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="DiffTool" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="BinViewTop" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="BinViewLeft" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="BinViewWidth" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="BinViewHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="BinViewFontSize" serializeAs="String">
+                <value>0</value>
+            </setting>
         </ToolApp.Properties.Settings>
     </userSettings>
 </configuration>
