バイナリビューワの機能追加と見直し

--- a/App.config
+++ b/App.config
@@ -94,6 +94,18 @@
             <setting name="BinViewFontSize" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="StatisticTop" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="StatisticLeft" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="StatisticWidth" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="StatisticHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
         </ToolApp.Properties.Settings>
     </userSettings>
 </configuration>
